--- a/.env
+++ b/.env
@@ -1,9 +1,12 @@
-# Add Environment Variables
-
-
-SECRET_KEY=postgres
-DB_NAME=postgres
-DB_USER=postgres
-DB_PASS=postgres
+DJANGO_SECRET_KEY=my_secret_key
+DEBUG=True
+DJANGO_LOGLEVEL=info
+DATABASE_NAME=postgres
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=postgres
 DB_SERVICE=postgres
-DB_PORT=5432
+DATABASE_PORT=5432
+DJANGO_LOGLEVEL=info
+DJANGO_ALLOWED_HOSTS=localhost
+DATABASE_ENGINE=postgresql_psycopg2
+DATABASE_HOST=postgres
